[package]
name = "puzzle2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.10.2"
strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
